search and detroy +testing

--- a/Linked lists/Linked lists.vcxproj
+++ b/Linked lists/Linked lists.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="iterator.cpp" />
     <ClCompile Include="list.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="nodetype.cpp" />
   </ItemGroup>
   <ItemGroup>
